more cleanups and found fixes for several things: 1) Navbar button has a class... btn-navbar 2) Override vertcal-align on .material-icons

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,19 +1,10 @@
 body{
-	/*background: #CFD8DC;
-	color: #ECEFF1;*/
 	font-family: Roboto,Ariel,sans-serif;
 }
-
-/*h4{
-	margin-bottom: 10px;
-	font-weight: 600;
-}*/
 
 hr{
 	width: 25%;
 	padding: 2px;
-/*	border-color: #8BC34A;
-	background-color: #8BC34A;*/
 	text-align: left;
 	margin-left: 0;
 }
@@ -22,36 +13,33 @@ hr{
 	padding: 73px 0px 0px 0px;
 }
 
-#projects{
-	/*top-margin: 10px;*/
+.material-icons{
+	vertical-align: bottom;
+}
+.nav-shadow{
+	-webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+	-moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+	box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
+}
+
+.navbar{
+	margin-bottom: inherit;
 }
 
 .panel{
-	/*color: #ECEFF1;*/
 	border-radius: 4px 4px 0px 0px;
-	/*border: 0px;*/
-		-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
 	box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.5);
 }
 
 .panel-heading{
-	/*background-color: #8BC34A;
-	color: #ECEFF1;*/
+
 	font-weight: 500;
 	font-size: 1.5em;
 	text-align: right;
 	border-radius: 4px 4px 0px 0px;
 	right-padding: 15px;
-}
-.panel-body{
-	/*background-color: #37474F;*/
-}
-
-.nav-shadow{
-	-webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
-	-moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
-	box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.5);
 }
 
 
